Fixes TitleBar and main content margin / padding / scrollbar to work as expected

--- a/static/app.css
+++ b/static/app.css
@@ -2204,6 +2204,27 @@ html {
   outline: 2px solid hsl(var(--su));
 }
 
+.btn-warning {
+  --tw-border-opacity: 1;
+  border-color: hsl(var(--wa) / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--wa) / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: hsl(var(--wac, var(--nc)) / var(--tw-text-opacity));
+}
+
+.btn-warning:hover,
+    .btn-warning.btn-active {
+  --tw-border-opacity: 1;
+  border-color: hsl(var(--wa) / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--wa) / var(--tw-bg-opacity));
+}
+
+.btn-warning:focus-visible {
+  outline: 2px solid hsl(var(--wa));
+}
+
 .btn.glass:hover,
     .btn.glass.btn-active {
   --glass-opacity: 25%;
@@ -2480,6 +2501,10 @@ html {
 
 .drawer-toggle:focus-visible ~ .drawer-content .drawer-button.btn-success {
   outline: 2px solid hsl(var(--su));
+}
+
+.drawer-toggle:focus-visible ~ .drawer-content .drawer-button.btn-warning {
+  outline: 2px solid hsl(var(--wa));
 }
 
 .label a:hover {
@@ -3357,9 +3382,18 @@ html {
   top: 2rem;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .mb-2 {
@@ -3392,6 +3426,22 @@ html {
 
 .mt-4 {
   margin-top: 1rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mb-\[-20rem\] {
+  margin-bottom: -20rem;
+}
+
+.mb-16 {
+  margin-bottom: 4rem;
 }
 
 .block {
@@ -3430,8 +3480,24 @@ html {
   height: 100vh;
 }
 
+.h-\[\] {
+  height: ;
+}
+
+.h-\[120\%\] {
+  height: 120%;
+}
+
 .max-h-60 {
   max-height: 15rem;
+}
+
+.max-h-24 {
+  max-height: 6rem;
+}
+
+.max-h-\[400px\] {
+  max-height: 400px;
 }
 
 .w-12 {
@@ -3510,6 +3576,18 @@ html {
   scroll-snap-align: center;
 }
 
+.scroll-pb-8 {
+  scroll-padding-bottom: 2rem;
+}
+
+.scroll-pb-1 {
+  scroll-padding-bottom: 0.25rem;
+}
+
+.scroll-pb-16 {
+  scroll-padding-bottom: 4rem;
+}
+
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -3568,6 +3646,10 @@ html {
   overflow: auto;
 }
 
+.overflow-scroll {
+  overflow: scroll;
+}
+
 .overflow-x-auto {
   overflow-x: auto;
 }
@@ -3582,6 +3664,10 @@ html {
 
 .overflow-y-hidden {
   overflow-y: hidden;
+}
+
+.overflow-y-visible {
+  overflow-y: visible;
 }
 
 .truncate {
@@ -3626,6 +3712,16 @@ html {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-slate-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+}
+
 .object-contain {
   object-fit: contain;
 }
@@ -3655,6 +3751,16 @@ html {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .pb-1 {
@@ -3699,6 +3805,34 @@ html {
 
 .pt-2 {
   padding-top: 0.5rem;
+}
+
+.pb-8 {
+  padding-bottom: 2rem;
+}
+
+.pb-\[8\] {
+  padding-bottom: 8;
+}
+
+.pb-\[-2rem\] {
+  padding-bottom: -2rem;
+}
+
+.pb-12 {
+  padding-bottom: 3rem;
+}
+
+.pb-52 {
+  padding-bottom: 13rem;
+}
+
+.pb-\[-20rem\] {
+  padding-bottom: -20rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
 }
 
 .text-left {
